Setup API for revoke SmartContract with Etherjs

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 PORT = 4000
 IPFS_ENDPOINT_PORT = 8005
 IPFS_API_PORT = 5005
+CONTRACT_ADDRESS=0xed2ECD433938E133e2430BEaB47d15dd6278225D
+NODE_URL=http://localhost:8548
