--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "ethers": "^6.11.1",
     "express": "^4.19.1",
     "formidable": "^3.5.1",
     "ipfs-http-client": "^60.0.1",
